fixed the spacing and added a paragraph

--- a/track-health/src/App.css
+++ b/track-health/src/App.css
@@ -5,19 +5,37 @@ nav {
   display: flex;
   align-items: center;
   justify-content: right;
-  height: 11.0vw;
+  height: 8.0vw;
   width: 100%;
+}
+
+nav:after {
+  content: ""; 
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-image: linear-gradient(to left, rgba(255, 255, 255, 0), beige);
+  z-index: -1;
+}
+nav img {
+  position: absolute;
+  opacity: .3;
+  left: 8vw;
+  width: 6%;
+  height: 70%;
 }
 nav button {
   position: relative;
   float: right;
   margin-right: 20px;
-  top: -20%;
+  width: 12.0vw;
   color: darkblue;
   background-color: beige;
-  border: none;
   padding: 14px 16px;
-  font-size: 16px;
+  font-size: 1.7vw;
+  font-style: italic;
   box-shadow: 5px 5px 5px darkblue;
   font-family:Arial, Helvetica, sans-serif;
   -webkit-border-radius: 20px;
@@ -38,7 +56,6 @@ nav h1 {
   border-right: 10px;
   font-weight: lighter;
   left: 6vw;
-  top: -.5vw;
   font-size: 3.2vw;
   color: beige;
   font-family: Arial, Helvetica, sans-serif
@@ -72,8 +89,8 @@ nav h1 span {
   background: rgb(27,0,242);
   background: linear-gradient(0deg, rgba(27,0,242,1) 0%, rgba(127,121,255,1) 100%);
   background-size: 200% 100%;
-  animation: sparkle 15s infinite;
-  -webkit-animation: sparkle 15s infinite;
+  animation: sparkle 5s infinite;
+  -webkit-animation: sparkle 2s infinite;
 }
 
 @keyframes sparkle {
@@ -108,7 +125,7 @@ nav h1 span {
   position: relative;
   background: beige;
   width: 14vw;
-  top: -5vw;
+  top: -6vw;
   height: 25.0vw;
   box-shadow: 5px 5px 5px darkblue;
   margin: 0 10px;
@@ -163,31 +180,46 @@ nav h1 span {
   background-color: #ccc;
 }
 
-
-/*
-
-.pushDayCard h3 {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-.pushDayCard p {
-  font-size: 16px;
-  line-height: 1.5;
-} */
-/* 
-.pushDayCard img {
+.first-half-paragraph-container {
+  position: absolute;
+  opacity: 0;
   width: 100%;
-  max-height: 200px;
-  object-fit: cover;
+  height: 35%;
+  top: 0;
+  left: 0;
+  animation-name: fade-in;
+  animation-duration: 5s;
+  animation-fill-mode: forwards;
 }
 
-.pushDayCard h3 {
-  font-size: 24px;ß
-  margin-bottom: 10px;
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
-.pushDayCard p {
-  font-size: 16px;
-  line-height: 1.5;
-} */
+.first-half-paragraph-container h1 {
+  position: absolute;
+  top: -10%;
+  padding: 10px;
+  font-size: 2.5vw;
+  font-style: italic;
+}
+
+.first-half-paragraph-container p span {
+  color: darkblue;
+  font-weight: bold;
+  font-size: 1.9vw;
+}
+
+.first-half-paragraph-container p {
+  position: absolute;
+  color: beige;
+  top: 18%;
+  padding: 10px;
+  font-size: 1.7vw;
+  font-style: italic;
+}
